# hybrid-quantum-analytics

./: Dockerfile  LICENSE  README.md  pyproject.toml
examples/: config_local.yaml  config_spark.yaml  sample_data.csv
src/qabda/: __init__.py  artifacts.py  cli.py  config.py  data_io.py  logging_utils.py  metrics.py  pipeline.py  preprocessing.py
src/qabda/models/: classical.py
src/qabda/quantum/: feature_maps.py  qaoa_opt.py  vqc.py
src/qabda/reducers/: base.py  classical_pca.py  qpca_surrogate.py
tests/: test_smoke.py
